--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ button:hover{background:#256428}
 
 <div class="container">
 
-<img src="imagens/escudo.png" class="escudo" alt="Escudo 12 Regras de Ouro">
+<img src="escudo.png" class="escudo" alt="Escudo 12 Regras de Ouro">
 
 <h1>12 Regras de Ouro</h1>
 <h2>Para um Ano Mais Seguro</h2>
