--- a/index.html
+++ b/index.html
@@ -68,9 +68,70 @@ button:hover{background:#256428}
   margin:0 auto 15px;
   max-width:140px;
 }
-  <style>
-/* ... SEU CSS QUE JÁ EXISTE ... */
-
+<style>
+body{
+  font-family: Arial, sans-serif;
+  background:#f4f6f8;
+  margin:0;
+  padding:20px;
+}
+.container{
+  max-width:900px;
+  margin:auto;
+  background:#fff;
+  padding:25px;
+  border-radius:10px;
+}
+h1,h2,h3{text-align:center}
+.hidden{display:none}
+input,select{
+  width:100%;
+  padding:10px;
+  margin-bottom:12px;
+  border-radius:6px;
+  border:1px solid #ccc;
+}
+button{
+  background:#2e7d32;
+  color:#fff;
+  border:none;
+  padding:12px 18px;
+  border-radius:6px;
+  cursor:pointer;
+  font-size:16px;
+}
+button:hover{background:#256428}
+.question{
+  background:#fafafa;
+  padding:12px;
+  border-radius:6px;
+  margin-bottom:12px;
+  border-left:6px solid #ccc;
+}
+.question.correct{
+  border-left-color:#2e7d32;
+  background:#e8f5e9;
+}
+.question.wrong{
+  border-left-color:#c62828;
+  background:#fdecea;
+}
+.ranking{
+  background:#f1f8e9;
+  padding:15px;
+  border-radius:8px;
+  margin-top:30px;
+}
+.msg{
+  margin-top:15px;
+  font-weight:bold;
+  color:#2e7d32;
+}
+.escudo{
+  display:block;
+  margin:0 auto 15px;
+  max-width:140px;
+}
 .selo {
   width: 140px;
   padding: 10px;
@@ -82,6 +143,7 @@ button:hover{background:#256428}
   font-size: 13px;
 }
 </style>
+
 
 </head>
 
@@ -310,7 +372,7 @@ function concluirRegra(){
   regraAtual++;
   setTimeout(carregarRegra,1500);
 }
-salvarSelo(regraAtual);
+
 
 
 function salvarRanking(){
@@ -335,8 +397,16 @@ carregarRanking();
     selos.push(regraIndex);
     localStorage.setItem("selos", JSON.stringify(selos));
   }
+function salvarSelo(regraIndex){
+  let selos = JSON.parse(localStorage.getItem("selos")) || [];
+  if(!selos.includes(regraIndex)){
+    selos.push(regraIndex);
+    localStorage.setItem("selos", JSON.stringify(selos));
+  }
   carregarSelos();
-    function carregarSelos(){
+}
+
+function carregarSelos(){
   const div = document.getElementById("selos");
   if(!div) return;
 
@@ -357,10 +427,9 @@ carregarRanking();
     `;
   });
 }
+
 carregarRanking();
 carregarSelos();
-
-
 
 </script>
 
